--- a/website/website/templates/index.html
+++ b/website/website/templates/index.html
@@ -100,18 +100,21 @@
                     teamurl = context['teamurl'];
                     imageurl = context['imageurl'];
                     teamname = context['teamname'];
+                    score = context['score'];
                     if (news_title.length != 0){
                         for (var i=0 ; i< news_title.length; i++){
                             var keyword = content[i].split(query);
 
-							$("#result-box").append("<div class='name'><a href=" + news_url[i] + " target='_blank'>" + news_title[i] + "</a></div>")
+							$("#result-box").append("<div class='name'><a href=" + news_url[i] + " target='_blank'>" + news_title[i] + "</a><span style='float:right' class='score'>相似度打分： " +score[i]+ "</span></div>")
                             //$("#result-box").append("<div class='txt'><span>" + content[i] + "</span></div>")
                             //$("#result-box").append("<span name='txt' width='300' >" + content[i] + "</span>");
                             $("#result-box").append(keyword.join('<span style="background:#cfc;">' + query + '</span>'));
                             $("#result-box").append("<div class='image'><a href=" + teamurl[i] + " target='_blank'><img width='100 ' height='100' src = " + imageurl[i] + "></a></div>");
-						}
-                        $("#result-box").show();
-                        }
+						}}
+                    else{
+                        $("#result-box").html("Sorry, no search results. You can try something else");
+                    }
+                     $("#result-box").show();
                   }
             });
         });
